<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.goncharov.anton.tarakan.GameOverActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:paddingTop="30dp"
        android:text="@string/game_over_description2"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_margin="16dp"
        android:text="@string/game_over_description3"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonAgainLose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginBottom="116dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:background="@color/main_color_tarakan"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/game_over_button_1"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonAgainLose"
        android:layout_alignBottom="@+id/buttonAgainLose"
        android:layout_alignEnd="@+id/textView7"
        android:layout_alignRight="@+id/textView7"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:background="@color/main_color_tarakan"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/game_over_button_2"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text="@string/game_over_description1"
        android:textAlignment="center"
        android:textColor="@color/main_color_tarakan"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
