<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.goncharov.anton.tarakan.WinActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="40dp"
        android:text="@string/win_description1"
        android:textAlignment="center"
        android:textColor="@color/main_color_tarakan"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="68dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:paddingTop="30dp"
        android:text="@string/win_description2"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="137dp" />

    <Button
        android:id="@+id/buttonAgainWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/main_color_tarakan"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/win_button_1"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="324dp"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/buttonExitWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/main_color_tarakan"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/win_button_2"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:layout_marginRight="41dp"
        android:layout_marginEnd="41dp"
        android:layout_alignBaseline="@+id/buttonAgainWin"
        android:layout_alignBottom="@+id/buttonAgainWin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/win_description3"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
